--- a/InvenTree/templates/InvenTree/settings/build.html
+++ b/InvenTree/templates/InvenTree/settings/build.html
@@ -1,16 +1,14 @@
-{% extends "InvenTree/settings/settings.html" %}
+{% extends "panel.html" %}
 {% load i18n %}
 {% load inventree_extras %}
 
-{% block tabs %}
-{% include "InvenTree/settings/tabs.html" with tab='build' %}
-{% endblock %}
+{% block label %}build-order{% endblock %}
 
-{% block subtitle %}
+{% block heading %}
 {% trans "Build Order Settings" %}
 {% endblock %}
 
-{% block settings %}
+{% block content %}
 
 <table class='table table-striped table-condensed'>
     {% include "InvenTree/settings/header.html" %}
