--- a/InvenTree/templates/InvenTree/settings/so.html
+++ b/InvenTree/templates/InvenTree/settings/so.html
@@ -1,15 +1,13 @@
-{% extends "InvenTree/settings/settings.html" %}
+{% extends "panel.html" %}
 {% load i18n %}
 
-{% block tabs %}
-{% include "InvenTree/settings/tabs.html" with tab='so' %}
-{% endblock %}
+{% block label %}sales-order{% endblock %}
 
-{% block subtitle %}
+{% block heading %}
 {% trans "Sales Order Settings" %}
 {% endblock %}
 
-{% block settings %}
+{% block content %}
 
 <table class='table table-striped table-condensed'>
     {% include "InvenTree/settings/header.html" %}
