--- a/InvenTree/templates/InvenTree/settings/stock.html
+++ b/InvenTree/templates/InvenTree/settings/stock.html
@@ -1,16 +1,13 @@
-{% extends "InvenTree/settings/settings.html" %}
+{% extends "panel.html" %}
 {% load i18n %}
 
-{% block tabs %}
-{% include "InvenTree/settings/tabs.html" with tab='stock' %}
-{% endblock %}
+{% block label %}stock{% endblock %}
 
-{% block subtitle %}
+{% block heading %}
 {% trans "Stock Settings" %}
 {% endblock %}
 
-{% block settings %}
-<h4>{% trans "Stock Options" %}</h4>
+{% block content %}
 
 <table class='table table-striped table-condensed'>
     {% include "InvenTree/settings/header.html" %}
