--- a/InvenTree/templates/InvenTree/settings/currencies.html
+++ b/InvenTree/templates/InvenTree/settings/currencies.html
@@ -1,16 +1,14 @@
-{% extends "InvenTree/settings/settings.html" %}
+{% extends "panel.html" %}
 {% load i18n %}
 {% load inventree_extras %}
 
-{% block tabs %}
-{% include "InvenTree/settings/tabs.html" with tab='currencies' %}
-{% endblock %}
+{% block label %}currencies{% endblock %}
 
-{% block subtitle %}
+{% block heading %}
 {% trans "Currency Settings" %}
 {% endblock %}
 
-{% block settings %}
+{% block content %}
 
 <table class='table table-striped table-condensed'>
     {% include "InvenTree/settings/header.html" %}
@@ -55,8 +53,4 @@
     </tbody>
 </table>
 
-{% endblock %}
-
-{% block js_ready %}
-{{ block.super }}
 {% endblock %}
