--- a/InvenTree/templates/InvenTree/settings/settings.html
+++ b/InvenTree/templates/InvenTree/settings/settings.html
@@ -20,6 +20,7 @@
 {% if user.is_staff %}
 
 {% include "InvenTree/settings/global.html" %}
+{% include "InvenTree/settings/currencies.html" %}
 {% include "InvenTree/settings/report.html" %}
 {% include "InvenTree/settings/part.html" %}
 {% include "InvenTree/settings/stock.html" %}
