--- a/InvenTree/templates/InvenTree/settings/navbar.html
+++ b/InvenTree/templates/InvenTree/settings/navbar.html
@@ -36,9 +36,15 @@
         <b>{% trans "InvenTree Settings" %}</b>
     </li>
 
-    <li class='list-group-item' title='{% trans "Global" %}'>
-        <a href='#' class='nav-toggle' id='select-global'>
-            <span class='fas fa-globe'></span> {% trans "Global" %}
+    <li class='list-group-item' title='{% trans "Server" %}'>
+        <a href='#' class='nav-toggle' id='select-server'>
+            <span class='fas fa-server'></span> {% trans "Server" %}
+        </a>
+    </li>
+
+    <li class='list-group-item' title='{% trans "Barcodes" %}'>
+        <a href='#' class='nav-toggle' id='select-barcodes'>
+            <span class='fas fa-qrcode'></span> {% trans "Barcodes" %}
         </a>
     </li>
 
