--- a/InvenTree/templates/InvenTree/settings/settings.html
+++ b/InvenTree/templates/InvenTree/settings/settings.html
@@ -15,6 +15,7 @@
 {% block content %}
 
 {% include "InvenTree/settings/user.html" %}
+{% include "InvenTree/settings/appearance.html" %}
 {% include "InvenTree/settings/user_settings.html" %}
 
 {% if user.is_staff %}
