Refactor language selection

--- a/InvenTree/templates/InvenTree/settings/appearance.html
+++ b/InvenTree/templates/InvenTree/settings/appearance.html
@@ -37,6 +37,10 @@
     </div>
 </div>
 
+<div class='panel-heading'>
+    <h4>{% trans "Language Settings" %}</h4>
+</div>
+
 <div class="row">
     <form action="{% url 'set_language' %}" method="post">{% csrf_token %}
         <input name="next" type="hidden" value="{% url 'settings-appearance' %}">
