inventreeDelete was not returning the promise

--- a/InvenTree/company/templates/company/detail.html
+++ b/InvenTree/company/templates/company/detail.html
@@ -371,7 +371,7 @@
                         requests.push(inventreeDelete(url));
                     });
             
-                    $.when.apply($, requests).then(function() {
+                    $.when.apply($, requests).done(function() {
                         $('#supplier-part-table').bootstrapTable('refresh');
                     });
                 }
