Add "homepage" settings page

--- a/InvenTree/templates/InvenTree/settings/settings.html
+++ b/InvenTree/templates/InvenTree/settings/settings.html
@@ -16,6 +16,7 @@
 
 {% include "InvenTree/settings/user.html" %}
 {% include "InvenTree/settings/user_settings.html" %}
+{% include "InvenTree/settings/user_homepage.html" %}
 
 {% if user.is_staff %}
 
