--- a/InvenTree/templates/InvenTree/settings/navbar.html
+++ b/InvenTree/templates/InvenTree/settings/navbar.html
@@ -18,17 +18,19 @@
         </a>
     </li>
 
-    <li class='list-group-item' title='{% trans "Appearance" %}'>
-        <a href='#' class='nav-toggle' id='select-appearance'>
-            <span class='fas fa-fill'></span> {% trans "Appearance" %}
+    <li class='list-group-item' title='{% trans "Home Page" %}'>
+        <a href='#' class='nav-toggle' id='select-user-home'>
+            <span class='fas fa-home'></span> {% trans "Home Page" %}
         </a>
     </li>
 
-    <li class='list-group-item' title='{% trans "Settings" %}'>
-        <a href='#' class='nav-toggle' id='select-user-settings'>
-            <span class='fas fa-cog'></span> {% trans "Settings" %}
-        </a>
-    </li>
+    <!--
+        <li class='list-group-item' title='{% trans "Settings" %}'>
+            <a href='#' class='nav-toggle' id='select-user-settings'>
+                <span class='fas fa-cog'></span> {% trans "Settings" %}
+            </a>
+        </li>
+    -->
 
     {% if user.is_staff %}
 
