--- a/InvenTree/templates/InvenTree/settings/navbar.html
+++ b/InvenTree/templates/InvenTree/settings/navbar.html
@@ -24,6 +24,12 @@
         </a>
     </li>
 
+    <li class='list-group-item' title='{% trans "Search" %}'>
+        <a href='#' class='nav-toggle' id='select-user-search'>
+            <span class='fas fa-search'></span> {% trans "Search" %}
+        </a>
+    </li>
+
     <!--
         <li class='list-group-item' title='{% trans "Settings" %}'>
             <a href='#' class='nav-toggle' id='select-user-settings'>
