--- a/InvenTree/templates/InvenTree/settings/settings.html
+++ b/InvenTree/templates/InvenTree/settings/settings.html
@@ -17,6 +17,7 @@
 {% include "InvenTree/settings/user.html" %}
 {% include "InvenTree/settings/user_settings.html" %}
 {% include "InvenTree/settings/user_homepage.html" %}
+{% include "InvenTree/settings/user_search.html" %}
 
 {% if user.is_staff %}
 
