--- a/InvenTree/templates/InvenTree/index.html
+++ b/InvenTree/templates/InvenTree/index.html
@@ -116,7 +116,7 @@ addHeaderAction('latest-parts', '{% trans "Latest Parts" %}', 'fa-newspaper');
 loadSimplePartTable("#table-latest-parts", "{% url 'api-part-list' %}", {
     params: {
         ordering: "-creation_date",
-        max_results: {% settings_value "PART_RECENT_COUNT" %},
+        max_results: {% settings_value "PART_RECENT_COUNT" user=request.user %},
     },
     name: 'latest_parts',
 });
@@ -155,7 +155,7 @@ loadStockTable($('#table-recently-updated-stock'), {
     params: {
         part_detail: true,
         ordering: "-updated",
-        max_results: {% settings_value "STOCK_RECENT_COUNT" %},
+        max_results: {% settings_value "STOCK_RECENT_COUNT" user=request.user %},
     },
     name: 'recently-updated-stock',
     grouping: false,
