--- a/InvenTree/templates/InvenTree/settings/settings.html
+++ b/InvenTree/templates/InvenTree/settings/settings.html
@@ -17,7 +17,7 @@
 {% include "InvenTree/settings/user.html" %}
 {% include "InvenTree/settings/user_settings.html" %}
 {% include "InvenTree/settings/user_homepage.html" %}
-{% include "InvenTree/settings/user_search.html" %}
+{% include "InvenTree/settings/user_homepage.html" %}
 
 {% if user.is_staff %}
 
@@ -54,7 +54,22 @@ $('table').find('.btn-edit-setting').click(function() {
     launchModalForm(
         url,
         {
-            reload: true,
+            success: function(response) {
+
+                console.log(`setting ${pk} -> ${response.value}`);
+
+                if (response.is_bool) {
+                    var enabled = response.value.toLowerCase() == 'true';
+
+                    console.log("bool result:", enabled);
+
+                    $(`#setting-value-${setting}`).prop('checked', enabled);
+                } else {
+                    $(`#setting-value-${setting}`).html(response.value);
+
+                    console.log("Normal result:", response.value);
+                }
+            }
         }
     );
 });
