Refactor 'category' setttings

--- a/InvenTree/templates/InvenTree/settings/navbar.html
+++ b/InvenTree/templates/InvenTree/settings/navbar.html
@@ -74,6 +74,12 @@
         </a>
     </li>
 
+    <li class='list-group-item' title='{% trans "Categories" %}'>
+        <a href='#' class='nav-toggle' id='select-category'>
+            <span class='fas fa-shapes'></span> {% trans "Categories" %}
+        </a>
+    </li>
+
     <li class='list-group-item' title='{% trans "Stock" %}'>
         <a href='#' class='nav-toggle' id='select-stock'>
             <span class='fas fa-boxes'></span> {% trans "Stock" %}
