Fixes for order.js

--- a/InvenTree/templates/base.html
+++ b/InvenTree/templates/base.html
@@ -147,6 +147,8 @@
 
 <!-- dynamic javascript templates -->
 <script type='text/javascript' src="{% url 'inventree.js' %}"></script>
+<script type='text/javascript' src="{% url 'calendar.js' %}"></script>
+<script type='text/javascript' src="{% url 'nav.js' %}"></script>
 <script type='text/javascript' src="{% url 'settings.js' %}"></script>
 
 <!-- translated javascript templates-->
@@ -155,12 +157,10 @@
 <script type='text/javascript' src="{% i18n_static 'barcode.js' %}"></script>
 <script type='text/javascript' src="{% i18n_static 'bom.js' %}"></script>
 <script type='text/javascript' src="{% i18n_static 'build.js' %}"></script>
-<script type='text/javascript' src="{% i18n_static 'calendar.js' %}"></script>
 <script type='text/javascript' src="{% i18n_static 'company.js' %}"></script>
 <script type='text/javascript' src="{% i18n_static 'filters.js' %}"></script>
 <script type='text/javascript' src="{% i18n_static 'forms.js' %}"></script>
 <script type='text/javascript' src="{% i18n_static 'label.js' %}"></script>
-<script type='text/javascript' src="{% i18n_static 'nav.js' %}"></script>
 <script type='text/javascript' src="{% i18n_static 'modals.js' %}"></script>
 <script type='text/javascript' src="{% i18n_static 'model_renderers.js' %}"></script>
 <script type='text/javascript' src="{% i18n_static 'order.js' %}"></script>
