--- a/InvenTree/order/templates/order/sales_orders.html
+++ b/InvenTree/order/templates/order/sales_orders.html
@@ -67,7 +67,7 @@
             {
                 success: function(response) {
 
-                    var prefix = '{% settings_value "SALESORDER_REFERENCE_PREFIX" %}';
+                    var prefix = global_settings.SALESORDER_REFERENCE_PREFIX;
 
                     for (var idx = 0; idx < response.length; idx++) {
                         var order = response[idx];
