--- a/InvenTree/order/templates/order/order_base.html
+++ b/InvenTree/order/templates/order/order_base.html
@@ -164,7 +164,7 @@ $("#edit-order").click(function() {
     constructForm('{% url "api-po-detail" order.pk %}', {
         fields: {
             reference: {
-                prefix: "{% settings_value 'PURCHASEORDER_REFERENCE_PREFIX' %}",
+                prefix: global_settings.PURCHASEORDER_REFERENCE_PREFIX,
             },
             {% if order.lines.count == 0 and order.status == PurchaseOrderStatus.PENDING %}
             supplier: {
