--- a/InvenTree/order/templates/order/purchase_orders.html
+++ b/InvenTree/order/templates/order/purchase_orders.html
@@ -66,7 +66,7 @@
             },
             {
                 success: function(response) {
-                    var prefix = '{% settings_value "PURCHASEORDER_REFERENCE_PREFIX" %}';
+                    var prefix = global_settings.PURCHASEORDER_REFERENCE_PREFIX;
 
                     for (var idx = 0; idx < response.length; idx++) {
 
