--- a/InvenTree/stock/templates/stock/item.html
+++ b/InvenTree/stock/templates/stock/item.html
@@ -119,6 +119,11 @@
         <h4>{% trans "Installed Stock Items" %}</h4>
     </div>
     <div class='panel-content'>
+        <div class='btn-group'>
+        <button type='button' class='btn btn-success' id='stock-item-install'>
+            <span class='fas fa-plus-circle'></span> {% trans "Install Stock Item" %}
+        </button>
+        </div>
         <table class='table table-striped table-condensed' id='installed-table'></table>
     </div>
 </div>
@@ -127,6 +132,20 @@
 
 {% block js_ready %}
 {{ block.super }}
+
+    $('#stock-item-install').click(function() {
+
+        launchModalForm(
+            "{% url 'stock-item-install' item.pk %}",
+            {
+                data: {
+                    'part': {{ item.part.pk }},
+                    'install_item': true,
+                },
+                reload: true,
+            }
+        );
+    });
 
     loadInstalledInTable(
         $('#installed-table'),
