Refactored DuplicatePart form
- API endpoint now takes care of duplication of other data

--- a/InvenTree/part/templates/part/part_base.html
+++ b/InvenTree/part/templates/part/part_base.html
@@ -486,12 +486,7 @@
 
     {% if roles.part.add %}
     $("#part-duplicate").click(function() {
-        launchModalForm(
-            "{% url 'part-duplicate' part.id %}",
-            {
-                follow: true,
-            }
-        );
+        duplicatePart({{ part.pk }});
     });
     {% endif %}
 
