Refactor MakeVariant form
- Now is essentially identical to the DuplicatePart form
- Uses the API form structure

--- a/InvenTree/part/templates/part/detail.html
+++ b/InvenTree/part/templates/part/detail.html
@@ -525,10 +525,11 @@
     loadPartVariantTable($('#variants-table'), {{ part.pk }});
 
     $('#new-variant').click(function() {
-        launchModalForm(
-            "{% url 'make-part-variant' part.id %}",
+
+        duplicatePart(
+            {{ part.pk}},
             {
-                follow: true,
+                variant: true,
             }
         );
     });
