--- a/InvenTree/part/templates/part/bom_upload/upload_file.html
+++ b/InvenTree/part/templates/part/bom_upload/upload_file.html
@@ -3,47 +3,74 @@
 {% load i18n %}
 {% load inventree_extras %}
 
-{% block heading %}
-{% trans "Upload BOM File" %}
+{% block menubar %}
+<ul class='list-group'>
+    <li class='list-group-item'>
+        <a href='#' id='part-menu-toggle'>
+            <span class='menu-tab-icon fas fa-expand-arrows-alt'></span>
+        </a>
+    </li>
+    <li class='list-group-item' title='{% trans "Return To BOM" %}'>
+        <a href='{% url "part-detail" part.id %}' id='select-upload-file' class='nav-toggle'>
+            <span class='fas fa-undo side-icon'></span>
+            {% trans "Return To BOM" %}
+        </a>
+    </li>
+</ul>
 {% endblock %}
 
 {% block page_content %}
 
-<h4>{% trans "Upload Bill of Materials" %}</h4>
+<div class='panel panel-default panel-inventree' id='panel-upload-file'>
+    <div class='panel-heading'>
+        {% block heading %}
+        <h4>{% trans "Upload Bill of Materials" %}</h4>
+        {{ wizard.form.media }}
+        {% endblock %}
+    </div>
+    <div class='panel-content'>
+        {% block details %}
 
-{% block form_alert %}
-<div class='alert alert-info alert-block'>
-    <b>{% trans "Requirements for BOM upload" %}:</b>
-    <ul>
-        <li>{% trans "The BOM file must contain the required named columns as provided in the " %} <b><a href="/part/bom_template/">{% trans "BOM Upload Template" %}</a></b></li>
-        <li>{% trans "Each part must already exist in the database" %}</li>
-    </ul>
-</div>
-{% endblock %}
+        <p>{% blocktrans with step=wizard.steps.step1 count=wizard.steps.count %}Step {{step}} of {{count}}{% endblocktrans %}
+        {% if description %}- {{ description }}{% endif %}</p>
 
-<p>{% blocktrans with step=wizard.steps.step1 count=wizard.steps.count %}Step {{step}} of {{count}}{% endblocktrans %}
-{% if description %}- {{ description }}{% endif %}</p>
+        <form action="" method="post" class='js-modal-form' enctype="multipart/form-data">
+        {% csrf_token %}
+        {% load crispy_forms_tags %}
 
-<form action="" method="post" class='js-modal-form' enctype="multipart/form-data">
-{% csrf_token %}
-{% load crispy_forms_tags %}
+        {% block form_buttons_top %}
+        {% endblock form_buttons_top %}
 
-{% block form_buttons_top %}
-{% endblock form_buttons_top %}
+        {% block form_alert %}
+        <div class='alert alert-info alert-block'>
+            <b>{% trans "Requirements for BOM upload" %}:</b>
+            <ul>
+                <li>{% trans "The BOM file must contain the required named columns as provided in the " %} <b><a href="/part/bom_template/">{% trans "BOM Upload Template" %}</a></b></li>
+                <li>{% trans "Each part must already exist in the database" %}</li>
+            </ul>
+        </div>
+        {% endblock %} 
 
-<table class='table table-striped' style='margin-top: 12px; margin-bottom: 0px'>
-{{ wizard.management_form }}
-{% block form_content %}
-{% crispy wizard.form %}
-{% endblock form_content %}
-</table>
+        <table class='table table-striped' style='margin-top: 12px; margin-bottom: 0px'>
+        {{ wizard.management_form }}
+        {% block form_content %}
+        {% crispy wizard.form %}
+        {% endblock form_content %}
+        </table>
 
-{% block form_buttons_bottom %}
-{% if wizard.steps.prev %}
-<button name="wizard_goto_step" type="submit" value="{{ wizard.steps.prev }}" class="save btn btn-default">{% trans "Previous Step" %}</button>
-{% endif %}
-<button type="submit" class="save btn btn-default">{% trans "Upload File" %}</button>
-</form>
-{% endblock form_buttons_bottom %}
+        {% block form_buttons_bottom %}
+        {% if wizard.steps.prev %}
+        <button name="wizard_goto_step" type="submit" value="{{ wizard.steps.prev }}" class="save btn btn-default">{% trans "Previous Step" %}</button>
+        {% endif %}
+        <button type="submit" class="save btn btn-default">{% trans "Upload File" %}</button>
+        </form>
+        {% endblock form_buttons_bottom %}
 
-{% endblock %}
+        {% endblock details %}
+    </div>
+
+{% endblock page_content %}
+
+{% block js_ready %}
+{{ block.super }}
+{% endblock js_ready %}
