Add user settings for report and labels

--- a/InvenTree/templates/InvenTree/settings/navbar.html
+++ b/InvenTree/templates/InvenTree/settings/navbar.html
@@ -30,6 +30,18 @@
         </a>
     </li>
 
+    <li class='list-group-item' title='{% trans "Labels" %}'>
+        <a href='#' class='nav-toggle' id='select-user-labels'>
+            <span class='fas fa-tag'></span> {% trans "Labels" %}
+        </a>
+    </li>
+
+    <li class='list-group-item' title='{% trans "Reports" %}'>
+        <a href='#' class='nav-toggle' id='select-user-reports'>
+            <span class='fas fa-file-pdf'></span> {% trans "Reports" %}
+        </a>
+    </li>
+
     <!--
         <li class='list-group-item' title='{% trans "Settings" %}'>
             <a href='#' class='nav-toggle' id='select-user-settings'>
