--- a/InvenTree/templates/InvenTree/settings/settings.html
+++ b/InvenTree/templates/InvenTree/settings/settings.html
@@ -18,6 +18,8 @@
 {% include "InvenTree/settings/user_settings.html" %}
 {% include "InvenTree/settings/user_homepage.html" %}
 {% include "InvenTree/settings/user_search.html" %}
+{% include "InvenTree/settings/user_labels.html" %}
+{% include "InvenTree/settings/user_reports.html" %}
 
 {% if user.is_staff %}
 
