Implement option to display labels "inline" in the browser

--- a/InvenTree/templates/InvenTree/settings/user_reports.html
+++ b/InvenTree/templates/InvenTree/settings/user_reports.html
@@ -6,7 +6,7 @@
 {% block label %}user-reports{% endblock %}
 
 {% block heading %}
-{% trans "Label Settings" %}
+{% trans "Report Settings" %}
 {% endblock %}
 
 {% block content %}
