--- a/InvenTree/templates/InvenTree/settings/user_settings.html
+++ b/InvenTree/templates/InvenTree/settings/user_settings.html
@@ -14,6 +14,10 @@
 <div class='row'>
     <table class='table table-striped table-condensed'>
         {% include "InvenTree/settings/header.html" %}
+        <tbody>
+        {% include "InvenTree/settings/setting.html" with key="PART_DISPLAY_SUMMARY" user_setting=True %}
+
+        </tbody>
 
     </table>
 </div>
