--- a/InvenTree/order/templates/order/purchase_order_detail.html
+++ b/InvenTree/order/templates/order/purchase_order_detail.html
@@ -327,7 +327,7 @@ $("#po-table").inventreeTable({
         {
             sortable: true,
             sortName: 'part__MPN',
-            field: 'supplier_part_detail.MPN',
+            field: 'supplier_part_detail.manufacturer_part_detail.MPN',
             title: '{% trans "MPN" %}',
             formatter: function(value, row, index, field) {
                 if (row.supplier_part_detail && row.supplier_part_detail.manufacturer_part) {
