--- a/InvenTree/InvenTree/static/css/inventree.css
+++ b/InvenTree/InvenTree/static/css/inventree.css
@@ -641,8 +641,8 @@
 }
 
 .modal-error {
-    border: 2px #F99 solid;
-    background-color: #faf0f0;
+    border: 2px #FCC solid;
+    background-color: #f5f0f0;
 }
 
 .modal-header {
