New custom serializer for handling attachments

--- a/InvenTree/part/templates/part/detail.html
+++ b/InvenTree/part/templates/part/detail.html
@@ -868,6 +868,7 @@
     
                     constructForm(url, {
                         fields: {
+                            filename: {},
                             comment: {},
                         },
                         title: '{% trans "Edit Attachment" %}',
